feat(DATA-468): change netex export job save operation and get operation